# sar_robot_simulator

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: robot_simulator_node.py
